# avocado_price_forecasting_individual

./: Makefile  README.html  README.md  data_comparison.html  data_comparison.md  pyproject.toml  requirements.txt
avocado_price_forecasting_individual/: README.md  __init__.py  dataset.py  features.py  plots.py
avocado_price_forecasting_individual/modeling/: predict.py  train.py
docs/: missing_values_handling.html  missing_values_handling.md  mkdocs.yml
docs/docs/: index.md
models/: README.md  imputer_weather.joblib  le_region_weather.joblib  le_type_weather.joblib  scaler_weather.joblib  xgboost_weather.joblib
notebooks/: 0-Overview.ipynb  1_Business_Understanding.ipynb  2_Data_Understanding.ipynb  3_Data_Preparation.ipynb  4_Modeling.ipynb  5_Evaluation.ipynb  DEVELOPMENT_PLAN.md  avocado_price_forecasting.ipynb
src/: getweatherdata.py
