[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "avocado_price_forecasting_individual"
version = "0.0.1"
description = "Develop a machine learning model to accurately predict avocado prices as best as possible."
authors = [
  { name = "Navid Gharapanjeh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn",
    "tqdm",
    "typer",
]


[tool.ruff]
line-length = 99
src = ["avocado_price_forecasting_individual"]
include = ["pyproject.toml", "avocado_price_forecasting_individual/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["avocado_price_forecasting_individual"]
force-sort-within-sections = true

